Fixed login on mobile devices

--- a/src/themes/quick-test/login/resources/quicktest.css
+++ b/src/themes/quick-test/login/resources/quicktest.css
@@ -7,6 +7,8 @@
   border-top-style: solid;
   border-width: 1px;
   border-color: #757575;
+  z-index: 99;
+  background: #fff;
 }
 
 .footer-font {
@@ -19,7 +21,7 @@
 	position: fixed;
 	left: 24px;
 	bottom: 3px;
-}	
+}
 
 .footer-imprint {
 	position: fixed;
@@ -43,7 +45,7 @@
 	position: fixed;
 	top: 20px;
 	left: 50%;
-	width: 400px;
+	width: 100%;
 	margin-left: -110px;
 	font-family: "Telegrotesk Next Bold";
 	font-size: 21px;
@@ -51,7 +53,7 @@
 }
 
 .text {
- 	position: fixed;
+ 	position: absolute;
  	left: 50%;
  	width: 600px;
  	margin-left: -300px;
@@ -62,7 +64,7 @@
 }
 
 .text-bold {
- 	position: fixed;
+ 	position: absolute;
  	left: 50%;
  	width: 600px;
  	margin-left: -300px;
@@ -73,7 +75,7 @@
 }
 
 .text-big {
-	position: fixed;
+	position: absolute;
 	left: 50%;
 	width: 400px;
 	margin-left: -200px;
@@ -95,11 +97,12 @@
 }
 
 .button {
-	position: fixed;
+	position: absolute;
 	left: 50%;
 	width: 500px;
 	height: 40px;
 	margin-left: -250px;
+  margin-bottom: 100px;
 	font-family: "Telegrotesk Next Regular";
 	font-size: 18px;
 	color: #FFFFFF;
@@ -110,7 +113,7 @@
 }
 
 .input {
-	position: fixed;
+	position: absolute;
 	left: 50%;
 	width: 485px;
 	height: 45px;
@@ -138,7 +141,7 @@
 	border-width: 1px;
 	border-radius: 4px;
 	border-color: #ff6400;
-} 
+}
 
 .user {
 	position: fixed;
@@ -146,18 +149,18 @@
 	top: 20px;
  	font-family: "Telegrotesk Next Regular";
  	font-size: 18px;
- 	color: #262626;	
+ 	color: #262626;
 }
 
 .button-logout {
 	position: fixed;
  	right: 40px;
 	top: 50px;
-	width: 100px; 
+	width: 100px;
 	visibility: hidden;
  	font-family: "Telegrotesk Next Regular";
  	font-size: 18px;
- 	color: #262626;	
+ 	color: #262626;
 	border-width: 1px;
 	border-radius: 4px;
 	border-color: #dddddd;
@@ -174,6 +177,42 @@
 	width: 180px;
 	margin-left: -90px;
 	height: auto;
+}
+
+.header {
+  position: fixed;
+  background: #ffffff;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 99;
+}
+
+@media all and (max-width: 767px) {
+  .input {
+    width: 90%;
+    left: 0;
+    margin-left: 2%;
+  }
+
+  .button {
+    width: 90%;
+    left: 0;
+    margin-left: 3%;
+  }
+
+  .text {
+    width: 90%;
+    left: 0;
+    margin-left: 2%;
+  }
+
+  .text-bold {
+    width: 90%;
+    left: 0;
+    margin-left: 2%;
+  }
 }
 
 @font-face {
